the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-deployment
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      volumes:
        - name: the-project-volume
          persistentVolumeClaim:
            claimName: the-project-pv-claim
      containers:
        - name: the-project
          image: k3d-local-registry:5000/todo-app:latest
          volumeMounts:
            - name: the-project-volume
              mountPath: /opt/project
