the_project/manifests/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-todos-headless
  namespace: project
spec:
  clusterIP: None
  selector:
    app: postgres-todos
  ports:
    - port: 5432
      name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-todos
  namespace: project
spec:
  serviceName: postgres-todos-headless
  replicas: 1
  selector:
    matchLabels:
      app: postgres-todos
  template:
    metadata:
      labels:
        app: postgres-todos
    spec:
      containers:
        - name: postgres
          image: postgres:18.1-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /pgdata
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        storageClassName: local-path
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi
